# qvarnet

./: .buildinfo  .gitignore  CLI_Usage_Guide.md  Makefile  QGT_Integration_Guide.md  QUICK_CHECKLIST.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  TRAIN_REFACTORING_GUIDE.md  environment_config.yaml  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  sampler_efficiency_analysis.py  search.html  searchindex.js  test_cli_interface.py  test_sampler_efficiency.py
JAX/: harmonic_oscillator_sample.ipynb  ho_sampler.py  hyperparams.json  jax_intro.ipynb  launch.py  mh_kernel.py  notes.md
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt  introduction.rst.txt
api_reference/: hamiltonians.html  index.html  models.html  modules.html  qvarnet.html  qvarnet.models.html  samplers.html
cli/: run.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DOCUMENTATION.md  DOCUMENTATION_SUMMARY.md  FAQ.md  INSTALLATION.md  PERFORMANCE.md  QUICK_REFERENCE.md  README.md  RESEARCH_GUIDE.md  TUTORIALS.md  generate_and_run.sh
examples/: README.md  harmonic_oscillator_deepset.py
notebooks/: backprop.ipynb  blackjax.ipynb  blackjax_testing.py  computation_graph  computation_graph_BM  computation_graph_epoch_0  computation_graph_trapz  exact_gradient.ipynb  fast_sampling.ipynb  fast_sampling_v2.ipynb  final_test.ipynb  gradient_VMC_formula_test.ipynb  harmonic_oscillator_trap_2d.ipynb  jax_intro.ipynb  laplace_operator.ipynb  loss_graph  mathematica_backwards.nb  (+13 more)
(+108 files in other folders)
