[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qvarnet"
version = "0.1.0"
description = "Modular ANNs for VMC scheme"
authors = [{ name = "Pau Fargas", email = "pau.fargas@upc.edu" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "torch"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]
